--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -1,3 +1,38 @@
-td {
-    text-align: right !important;
+.table-btn {
+    text-align: right;
+    width: 100px;
+}
+th {
+    white-space: nowrap;
+}
+
+.name {
+    width: 65%;
+}
+
+.name-head {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.new-char {
+    padding-right: 8px !important;
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
+.table-header {
+    margin-bottom: 0 !important;
+}
+
+h3 {
+    margin-bottom: 0;
+}
+
+h4 {
+    margin-block-start: 1em;
+    margin-block-end: 0em;
 }
