found missing stylesheet

--- a/views/campaigns.handlebars
+++ b/views/campaigns.handlebars
@@ -29,7 +29,7 @@
                 <td class="name">{{this.name}}</td>
                 <td class="text-right"><button>View</button></td>
                 <td class="text-right"><button>Update</button></td>
-                <td class="text-right"><button>Action</button></td></d>
+                <td class="text-right"><button>Action</button></td>
               </tr>
               {{/each}}
               </tbody>
