created account handlebar and api route

--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -1,8 +1,8 @@
 <div class="paper container margin-bottom-large">
         <form action="">
-          <h1>D&amp;D Login</h1>
+          <h1>D&amp;D Account Creation</h1>
             <div class="form-group">
-                <label for="">Email id</label>
+                <label for="">Email</label>
                 <input type="text" class="form-control" required>
             </div>
             <div class="form-group">
@@ -10,7 +10,6 @@
               <input type="password" class="form-control" required>
           </div>
           <div class="login-buttons">
-          <input type="submit" class="btn" value="Login">
           <input type="submit" class="btn" value="Create Account">
           </div>
         </form>
