--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -1,13 +1,13 @@
 <div class="paper container margin-bottom-large">
-        <form action="">
+        <form id="account-create" action="">
           <h1>D&amp;D Account Creation</h1>
             <div class="form-group">
                 <label for="">Email</label>
-                <input type="text" class="form-control" required>
+                <input type="text" class="form-control" id="email-account" required>
             </div>
             <div class="form-group">
               <label for="">Password</label>
-              <input type="password" class="form-control" required>
+              <input type="password" class="form-control" id="pass-account" required>
           </div>
           <div class="login-buttons">
           <input type="submit" class="btn" value="Create Account">
