--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="css/style.css" type="text/css" />
         <link rel="stylesheet" href="https://unpkg.com/papercss@1.8.1/dist/paper.css" type="text/css" />
 		<script src="https://code.jquery.com/jquery.js"></script>
-		{{!-- <script src="js/script.js"></script> --}}
+		<script src="js/script.js"></script>
 		<title>D&amp;D Campaign Manager &amp; Calculator</title>
 	</head>
 	<body>
