--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="https://unpkg.com/papercss@1.8.1/dist/paper.css" type="text/css" />
 		<script src="https://code.jquery.com/jquery.js"></script>
 		<script src="js/script.js"></script>
-    <title>Document</title>
+    <title>DnD</title>
 </head>
 <body>
     <main class="container">
