add click events

--- a/views/campaigns.handlebars
+++ b/views/campaigns.handlebars
@@ -15,9 +15,9 @@
           <h4 class="modal-title">Campaign Name</h4>
           <h5 class="modal-subtitle">Name your new campaign!</h5>
           <div class="form-group">
-            <input type="text" placeholder="" id="campaignName">
+            <input type="text" placeholder="" id="campaign-name">
           </div>
-          <label class="paper-btn margin" id="saveCampaign"for="campaignModal">Save</label>
+          <label class="paper-btn margin" id="save-campaign"for="campaignModal">Save</label>
         </div>
   </div>
 
