--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,16 +11,16 @@
 </head>
 <body>
     <main class="container">
-<div class="paper container margin-bottom-large">
-    <div class="row">
+<div class="paper container margin-bottom-large margin-top-large">
+    <div class="row text-title">
         <h1>D&amp;D Character Creator</h1>
     </div>
-    <div class="row">
+    <div class="row main-btn">
         <div class="col">
-        <button><a href="/login">Login</a></button>
+        <button id="login-btn">Login</button>
         </div>
         <div class="col">
-        <button><a href="/account">Create Account</a></button> 
+         <button id="create-btn">Create Account</button>
         </div>
     </div>
 
