--- a/views/campaigns.handlebars
+++ b/views/campaigns.handlebars
@@ -137,24 +137,25 @@
 
             
 
-            <table>
+            <table id="table{{this.id}}">
               <thead>
                 <tr>
                   <div class="row table-header">
                     <div class="col-6 col"><h4>Name</h4></div>
-                    <div class="col-6 col text-right"><label id="{{this.id}}" class="paper-btn margin new-char-btn" for="characterModal">+ New Character</label></div>
+                    <div class="col-6 col text-right"><label id="new{{this.id}}" class="paper-btn margin new-char-btn" for="characterModal">+ New Character</label></div>
                   </div>
                 </tr>
 
               </thead>
               <tbody>
-              {{#each this.characters}}
-              <tr>
-                <td class="name">{{this.name}}</td>
-                <td class="text-right"><button id="view{{this.id}}">View</button></td>
-                <td class="text-right"><button id="update{{this.id}}">Update</button></td>
-                <td class="text-right"><button id="action{{this.id}}">Action</button></td>
-              </tr>
+                {{#each this.characters}}
+                <tr id="character{{this.id}}">
+                  <td class="name">{{this.name}}</td>
+                  <td class="text-right"><button id="view{{this.id}}">View</button></td>
+                  <td class="text-right"><button id="update{{this.id}}">Update</button></td>
+                  <td class="text-right"><button id="action{{this.id}}">Action</button></td>
+                  <td class="text-right"><label class="btn-close delete" id="{{this.id}}">X</label></td>
+                </tr>
               {{/each}}
               </tbody>
             </table>
