--- a/public/css/style.css
+++ b/public/css/style.css
@@ -142,5 +142,9 @@ h4 {
 
  .text-title {
    justify-content: space-around;
-   text-decoration: none;
+   
  }
+ .account-heading {
+  justify-content: space-around;
+  
+}
