--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<div class="paper container margin-bottom-large">
+<div class="paper container margin-bottom-large margin-top-large">
         <form action="">
           <h1>D&amp;D Login</h1>
             <div class="form-group">
@@ -11,7 +11,7 @@
           </div>
           <div class="login-buttons">
           <input type="submit" class="btn" value="Login">
-          <input type="submit" class="btn" value="Create Account">
+          {{!-- <input type="submit" class="btn" value="Create Account"> --}}
           </div>
         </form>
 </div>
