--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,13 +1,13 @@
 <div class="paper container margin-bottom-large margin-top-large">
-        <form action="">
+        <form action="api/accounts/login" method="POST">
           <h1>D&amp;D Login</h1>
             <div class="form-group">
                 <label for="">Email id</label>
-                <input type="text" class="form-control" required>
+                <input name="email" type="text" class="form-control" required>
             </div>
             <div class="form-group">
               <label for="">Password</label>
-              <input type="password" class="form-control" required>
+              <input name="password" type="password" class="form-control" required>
           </div>
           <div class="login-buttons">
           <input type="submit" class="btn" value="Login">
