working on campaign post route

--- a/views/campaigns.handlebars
+++ b/views/campaigns.handlebars
@@ -4,7 +4,7 @@
     <h1>Campaigns</h1>
   </div>
   <div class="text-right">
-    <label class="paper-btn margin" for="campaignModal">+ New Campaign</label>
+    <label class="paper-btn margin" id="new-camp-btn" for="campaignModal">+ New Campaign</label>
   </div>
 
   <input class="modal-state" id="campaignModal" type="checkbox">
