--- a/views/campaigns.handlebars
+++ b/views/campaigns.handlebars
@@ -1,5 +1,5 @@
 
-<div class="paper container margin-bottom-large">
+<div class="paper container">
   <div class="text-center">
     <h1>Campaigns</h1>
   </div>
