removed erroneous html

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,31 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    	<link rel="stylesheet" href="css/style.css" type="text/css" />
-        <link rel="stylesheet" href="https://unpkg.com/papercss@1.8.1/dist/paper.css" type="text/css" />
-		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="js/script.js"></script>
-    <title>DnD</title>
-</head>
-<body>
-    <main class="container">
-<div class="paper container margin-bottom-large margin-top-large">
+<div class="paper container">
     <div class="row text-title">
-        <h1>D&amp;D Character Creator</h1>
+        <h1>D&amp;D Character Manager</h1>
     </div>
     <div class="row main-btn">
         <div class="col">
-        <button id="login-btn">Login</button>
+            <button id="login-btn">Login</button>
         </div>
         <div class="col">
-         <button id="create-btn">Create Account</button>
+            <button id="create-btn">Create Account</button>
         </div>
     </div>
-
-    
 </div>
-</main>
-</body>
-</html>
