--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,7 +2,7 @@
         <form action="api/accounts/login" method="POST">
           <h1>D&amp;D Login</h1>
             <div class="form-group">
-                <label for="">Email id</label>
+                <label for="">Email</label>
                 <input name="email" type="text" class="form-control" required>
             </div>
             <div class="form-group">
