--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,8 +18,8 @@
 			<h3><a href="/">D&amp;D Character Manager</a></h3>
 		</div>
 		<div class="collapsible">
-			<input id="collapsible1" type="checkbox" name="collapsible1">
-			<label for="collapsible1">
+			<input id="collapsibleNav" type="checkbox" name="collapsibleNav">
+			<label for="collapsibleNav">
 				<div class="bar1"></div>
 				<div class="bar2"></div>
 				<div class="bar3"></div>
