added handling for account already existing or invalid email

--- a/views/account.handlebars
+++ b/views/account.handlebars
@@ -1,7 +1,7 @@
 <div class="paper container margin-bottom-large margin-top-large">
-        <form id="account-create" action="/api/accounts/signup" method="POST">
-          <h1>D&amp;D Account Creation</h1>
-          
+        <form id="account-create">
+          <h1>Account Creation</h1>
+            <p class="error-message"></p>
             <div class="form-group">
               <label for="">Email</label>
               <input type="text" class="form-control" name="email" id="email-account" required>
